Добавление проверки на правильность ввода

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   
+  <!-- <script src="./script/onTranslation.js"></script> -->
   <script src="./script/main.js"></script>
 </body>
 </html>
