--- a/index.html
+++ b/index.html
@@ -128,5 +128,6 @@
 </section>
 <!--<script src="./script/oop.js"></script>-->
 <script src="./js/main.js"></script>
+<!-- <script src="./js/lesson_15.js"></script> -->
 </body>
 </html>
